--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.0.1
+Flask==2.2.3
 transformers==4.19.0
 datasets==1.18.0
 torch==1.12.1
 soundfile==0.10.3.post1
 celery==5.1.2
 redis==3.5.3
+Werkzeug==2.2.3
