--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,8 @@
-Flask==2.2.3
-transformers==4.19.0
-datasets==1.18.0
-torch==1.12.1
-soundfile==0.10.3.post1
-celery==5.1.2
-redis==3.5.3
-Werkzeug==2.2.3
+Flask
+transformers
+datasets
+torch
+soundfile
+celery
+redis
+Werkzeug
