--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.1.2
 transformers==4.9.2
 soundfile==0.10.3.post1
-numpy>=1.21.0,<1.25.0  # 调整此版本范围以避免冲突
-tokenizers>=0.10.3      # 添加 tokenizers 的兼容版本
+numpy>=1.21.0,<1.25.0
+tokenizers>=0.10.3
